--- a/app/src/main/res/layout/fragment_visitor_record.xml
+++ b/app/src/main/res/layout/fragment_visitor_record.xml
@@ -1,13 +1,21 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zbaohuang.fragment.VisitorRecordFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="访客记录" />
 
-</FrameLayout>
+    <View
+        android:layout_width="2px"
+        android:layout_height="match_parent"
+        android:background="#cdcdcd"
+        android:layout_marginLeft="50dp"/>
+
+    <ListView
+        android:id="@+id/listView"
+        android:divider="@null"
+        android:background="@android:color/transparent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</RelativeLayout>
