--- a/app/src/main/res/layout/fragment_care.xml
+++ b/app/src/main/res/layout/fragment_care.xml
@@ -1,13 +1,56 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.zbaohuang.fragment.CareFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="嘘寒问暖" />
+    <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/segmented"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
+        segmentedgroup:sc_border_width="1dp"
+        segmentedgroup:sc_corner_radius="5dp"
+        segmentedgroup:sc_tint_color="@android:color/holo_red_dark">
 
-</FrameLayout>
+        <RadioButton
+            android:id="@+id/button21"
+            style="@style/SegmentControl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="关爱提醒" />
+
+        <RadioButton
+            android:id="@+id/button22"
+            style="@style/SegmentControl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="探访" />
+
+        <RadioButton
+            android:id="@+id/button33"
+            style="@style/SegmentControl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="健康饮食" />
+    </info.hoang8f.android.segmented.SegmentedGroup>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#cdcdcd"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <FrameLayout
+        android:id="@+id/contentFrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
+
+</LinearLayout>
