--- a/app/src/main/res/layout/fragment_anaylsis.xml
+++ b/app/src/main/res/layout/fragment_anaylsis.xml
@@ -1,13 +1,20 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zbaohuang.fragment.AnaylsisFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <View
+        android:layout_width="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryText"/>
+
+    <ListView
+        android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="起居分析" />
+        android:background="@android:color/transparent"
+        android:divider="@null"/>
 
-</FrameLayout>
+</RelativeLayout>
